--- a/index.html
+++ b/index.html
@@ -1,1 +1,79 @@
-Hello World
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="description" content="KB">
+  <meta name="author" content="punkadeedle">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="public/stylesheets/main.css">
+
+  <script src="https://kit.fontawesome.com/9a00893d38.js" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-git2.min.js"></script>
+
+  <title>Kyanne Baker</title>
+</head>
+
+<body>
+  <div id="header-partial"></div>
+  <nav class="navbar fixed-top navbar-expand-md navbar-light bg-light">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a href="/"><div class="navbar-brand"><i class="fas fa-home"></i>Test</div></a>
+      </div>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse d-flex" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+          <li class="nav-item nav-link" data-toggle="modal" data-target="#contactModal" data-whatever="@mdo" onclick="toggleModal()">About</li>
+        </ul>
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item nav-link" data-toggle="modal" data-target="#contactModal" data-whatever="@mdo" onclick="toggleModal()">Contact</li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div id="modal-partial"></div>
+  <!-- BEGIN OF LOGINMODAL section -->
+  <div class="modal fade" id="contactModal" tabindex="-1" role="dialog" aria-labelledby="loginLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="loginLabel">It's a modal</h5>
+        </div>
+        Hello again!
+        <div>
+          Don't have an account?
+          <span data-toggle="modal" data-target="#loginModal" data-whatever="@mdo">
+            <a data-toggle="modal" data-target="#signupModal" data-whatever="@mdo"> Sign up!</a>
+          </span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div id="page-content" class="container-fluid">
+    <h1>Hello World!</h1>
+  </div>
+
+  <div id="footer-partial"></div>
+  <footer class="footer">
+    <div class="container-fluid">
+      <span class="text-muted">Copyright &copy; KB</span>
+    </div>
+  </footer>
+
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="public/scripts/script.js"></script>
+</body>
+</html>
