--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 
 <html lang="en" class="js-focus-visible" data-js-focus-visible>
 <head>
-  <meta charset="utf-8">
-  <meta name="description" content="KB">
-  <meta name="author" content="punkadeedle">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Welcome to my page.  I'm a software developer who loves logic puzzles and solving problems.">
+  <meta property="og:image" content="assets/images/profile3-preview.png" />
 
   <link rel="icon" href="assets/images/logo1.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
@@ -54,7 +54,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="#about">About</a>
               </li>
-              <li class="nav-item">
+              <li class="d-none nav-item">
                 <a class="nav-link" href="#projects">Portfolio</a>
               </li>
               <li class="d-none nav-item">
@@ -129,24 +129,8 @@
         </div>
       </div>
 
-      <!--PROJECTS SECTION -->
+      <!--UNDER CONSTRUCTION: PROJECTS SECTION -->
       <div class="d-none row section-separator justify-content-center" id="projects">
-        <div class="card wow fadeInUp col-sm-12 col-md-4" style="width: 18rem;">
-          <img class="card-img-top" src="..." alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Calendar</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-        <div class="card wow fadeInUp col-sm-12 col-md-4" style="width: 18rem;">
-          <img class="card-img-top" src="..." alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Photo Site</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
         <div class="card wow fadeInUp col-sm-12 col-md-4" style="width: 18rem;">
           <img class="card-img-top" src="..." alt="Card image cap">
           <div class="card-body">
