--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
               <img src="https://img.shields.io/badge/-JQuery-white?style=flat-square&logo=jQuery&logoColor=blue"></img>
               <img src="https://img.shields.io/badge/-NodeJS-white?style=flat-square&logo=Node.js"></img>
               <img src="https://img.shields.io/badge/-Express-white?style=flat-square&logo=express&logoColor=black"></img>
+              <img src="https://img.shields.io/badge/-Java-white?style=flat-square&logo=java&logoColor=teal"></img>
               <img src="https://img.shields.io/badge/-MongoDB-white?style=flat-square&logo=mongodb"></img>
               <img src="https://img.shields.io/badge/-MySQL-white?style=flat-square&logo=MySQL"></img>
               <img src="https://img.shields.io/badge/-HTML-white?style=flat-square&logo=html5"></img>
