--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           </div>
         </div>
         <div class="col-md-6 order-1 order-md-1 py-4">
-          <img class="profile-img img-fluid wow fadeInUp" src="assets/images/kb-climb-tpg-digital.png"></img>
+          <img class="img-fluid rounded-custom wow fadeInUp" src="assets/images/kb-climb-tpg-digital.png"></img>
         </div>
       </div>
 
